# openlineage_sql

./: Cargo.toml  Justfile  README.md  pyproject.toml
.github/workflows/: tests.yml
iface-py/tests/python/: test_small.py
impl/: Cargo.toml
impl/src/: visitor.rs
