[build-system]
requires = ["maturin>=1.0"]
build-backend = "maturin"

[tool.maturin]
manifest-path = "iface-py/Cargo.toml"

[project]
name = "openlineage_sql"
version = "1.33.0"
description = "Python interface for the Rust OpenLineage lineage extraction library"
readme = "README.md"
requires-python = ">=3.9"
keywords = [
  "openlineage",
]
authors = [{ name = "OpenLineage"}]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

[dependency-groups]
dev = [
    "maturin>=1.8.3",
    "openlineage-sql",
    "pytest>=8.3.5",
    "ruff>=0.11.8",
]

[tool.uv.sources]
openlineage-sql = { workspace = true }
